crates/inertia-embed/tests/ui/fail/manifest_outside_root.stderr
error: Vite manifest `../../../../crates/inertia-embed/tests/fixtures/valid/outside-manifest.json` resolves outside the embedded frontend root
 --> tests/ui/fail/manifest_outside_root.rs:4:13
  |
4 |       let _ = embed_frontend! {
  |  _____________^
5 | |         root: "../../../../crates/inertia-embed/tests/fixtures/valid/dist",
6 | |         manifest: "../../../../crates/inertia-embed/tests/fixtures/valid/outside-manifest.json",
7 | |         entry: "src/main.ts",
8 | |     };
  | |_____^
  |
  = note: this error originates in the macro `embed_frontend` (in Nightly builds, run with -Z macro-backtrace for more info)
